Prevent table headings wrapping
Table headings were wrapping mid-word and on mobile the headings were touching;
this prevents word wrapping and adds a little horizontal padding.

--- a/app/webpacker/styles/markdown.scss
+++ b/app/webpacker/styles/markdown.scss
@@ -119,9 +119,18 @@
     thead > tr {
       > th {
         text-align: left;
-        padding-bottom: $table-spacing;
+        padding: 0 $table-spacing $table-spacing $table-spacing;
         margin-bottom: $table-spacing;
         border-bottom: 1px solid $grey-light;
+        word-break: normal;
+
+        &:first-child {
+          padding-left: 0;
+        }
+
+        &:last-child {
+          padding-right: 0;
+        }
       }
     }
 
